Updated nurse interface

--- a/nurse/inventory_nurse.html
+++ b/nurse/inventory_nurse.html
@@ -26,7 +26,7 @@
         <ul>
           <li><a href="dashboard_nurse.html"><i class = "fa-solid fa-house"></i>Dashboard</a></li>
           <li><a href="patient_nurse.html"><i class = "fa-solid fa-users"></i>Patients</a></li>
-          <li><a href="inventory_nurse.html"><i class = "fa-solid fa-box"></i>Inventory</a></li>
+          <li><a href="inventory_nurse.html" class="active"><i class = "fa-solid fa-box"></i>Inventory</a></li>
           <li><a href="reports_nurse.html"><i class = "fa-solid fa-file-lines"></i>Reports</a></li>
           <li><a href="settings_nurse.html"><i class = "fa-solid fa-gear"></i>Settings</a></li>
         </ul>
