--- a/nurse/settings_nurse.html
+++ b/nurse/settings_nurse.html
@@ -28,7 +28,7 @@
             <li><a href="patient_nurse.html"><i class = "fa-solid fa-users"></i>Patients</a></li>
             <li><a href="inventory_nurse.html"><i class = "fa-solid fa-box"></i>Inventory</a></li>
             <li><a href="reports_nurse.html"><i class = "fa-solid fa-file-lines"></i>Reports</a></li>
-            <li><a href="settings_nurse.html"><i class = "fa-solid fa-gear"></i>Settings</a></li>
+            <li><a href="settings_nurse.html" class="active"><i class = "fa-solid fa-gear"></i>Settings</a></li>
             </ul>
         </nav>
         </aside>
