--- a/nurse/dashboard_nurse.html
+++ b/nurse/dashboard_nurse.html
@@ -24,7 +24,7 @@
       <!-- Menu -->
       <nav class="menu">
         <ul>
-          <li><a href="dashboard_nurse.html"><i class = "fa-solid fa-house"></i>Dashboard</a></li>
+          <li><a href="dashboard_nurse.html" class="active"><i class = "fa-solid fa-house"></i>Dashboard</a></li>
           <li><a href="patient_nurse.html"><i class = "fa-solid fa-users"></i>Patients</a></li>
           <li><a href="inventory_nurse.html"><i class = "fa-solid fa-box"></i>Inventory</a></li>
           <li><a href="reports_nurse.html"><i class = "fa-solid fa-file-lines"></i>Reports</a></li>
