Patient, nurse, landing page & login update

--- a/patient/settings_patient.html
+++ b/patient/settings_patient.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sidebar Example</title>
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="settings_nurse.css">
+  <link rel="stylesheet" href="settings_patient.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
@@ -24,12 +24,11 @@
         <!-- Menu -->
         <nav class="menu">
             <ul>
-            <li><a href="dashboard_nurse.html"><i class = "fa-solid fa-house"></i>Dashboard</a></li>
-            <li><a href="patient_nurse.html"><i class = "fa-solid fa-users"></i>Patients</a></li>
-            <li><a href="inventory_nurse.html"><i class = "fa-solid fa-box"></i>Inventory</a></li>
-            <li><a href="reports_nurse.html"><i class = "fa-solid fa-file-lines"></i>Reports</a></li>
-            <li><a href="nurse_hotlines.html"><i class = "fas fa-phone-alt"></i>Hotlines</a></li>
-            <li><a href="settings_nurse.html" class="active"><i class = "fa-solid fa-gear"></i>Settings</a></li>
+           <li><a href="dashboard_patient.html"><i class = "fa-solid fa-house"></i>Dashboard</a></li>
+            <li><a href="health_profile.html"><i class = "fa-solid fa-users"></i>Health Profile</a></li>
+            <li><a href="appointment_patient.html"><i class = "fa-solid fa-box"></i>Appointments</a></li>
+            <li><a href="patient_hotlines.html"><i class = "fa-solid fa-file-lines"></i>Hotlines</a></li>
+            <li><a href="settings_patient.html" class="active"><i class = "fa-solid fa-gear"></i>Settings</a></li>
             </ul>
         </nav>
         </aside>
@@ -142,12 +141,19 @@
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label class="form-label">License Number</label>
+                            <label class="form-label">ID Number</label>
                             <input type="text" class="form-input" value="">
                         </div>
-                        <div class="form-group">
-                            <label class="form-label">Position</label>
-                            <input type="text" class="form-input" value="">
+
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label class="form-label">Course</label>
+                                <input type="text" class="form-input" value="">
+                            </div>
+                            <div class="form-group">
+                                <label class="form-label">Year</label>
+                                <input type="text" class="form-input" value="">
+                            </div>
                         </div>
                     </div>
 
