--- a/super_admin/landing_page.html
+++ b/super_admin/landing_page.html
@@ -17,9 +17,9 @@
                 <img src="../images/dark_logo.png" alt="UCNIACARE Logo">
             </div>
             <ul class="nav-links">
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#features">Features</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="about_us.html"><b>About Us</b></a></li>
+                <li><a href="#features"><b>Features</b></a></li>
+                <li><a href="#contact"><b>Contact Us</b></a></li>
             </ul>
             <a href="../login.html" class="login-btn">LOGIN</a>
         </div>
