Added staff dashboard & settings + updated staff files

--- a/staff/inventory_staff.html
+++ b/staff/inventory_staff.html
@@ -21,7 +21,7 @@
       <!-- Menu -->
       <nav class="menu">
         <ul>
-          <li><a href="#"><i class = "fa-solid fa-house"></i>Dashboard</a></li>
+          <li><a href="dashboard_staff.html"><i class = "fa-solid fa-house"></i>Dashboard</a></li>
           <li><a href="patients_staff.html"><i class = "fa-solid fa-users"></i>Patients</a></li>
           <li><a href="inventory_staff.html" style="background:#e6f0ff;color:#0056b3;"><i class = "fa-solid fa-box"></i>Inventory</a></li>
           <li><a href="#"><i class = "fa-solid fa-gear"></i>Settings</a></li>
