--- a/staff/dashboard_staff.html
+++ b/staff/dashboard_staff.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sidebar Example</title>
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="dashboard_nurse.css">
+  <link rel="stylesheet" href="dashboard.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
@@ -27,6 +27,7 @@
           <li><a href="dashboard_staff.html" class="active"><i class = "fa-solid fa-house"></i>Dashboard</a></li>
           <li><a href="patients_staff.html"><i class = "fa-solid fa-users"></i>Patients</a></li>
           <li><a href="inventory_staff.html"><i class = "fa-solid fa-box"></i>Inventory</a></li>
+          <li><a href="hotline_staff.html"><i class = "fas fa-phone-alt"></i>Hotlines</a></li>
           <li><a href="settings_staff.html"><i class = "fa-solid fa-gear"></i>Settings</a></li>
         </ul>
       </nav>
