--- a/staff/patients_staff.html
+++ b/staff/patients_staff.html
@@ -21,6 +21,7 @@
           <li><a href="dashboard_staff.html" id="nav-dashboard"><i class="fa-solid fa-house"></i>Dashboard</a></li>
           <li><a href="patients_staff.html" id="nav-patients" style="background:#e6f0ff;color:#0056b3;"><i class="fa-solid fa-users"></i>Patients</a></li>
           <li><a href="inventory_staff.html" id="nav-inventory"><i class="fa-solid fa-box"></i>Inventory</a></li>
+          <li><a href="hotline_staff.html"><i class = "fas fa-phone-alt"></i>Hotlines</a></li>
           <li><a href="settings_staff.html" id="nav-settings"><i class="fa-solid fa-gear"></i>Settings</a></li>
         </ul>
       </nav>
