--- a/staff/inventory_staff.html
+++ b/staff/inventory_staff.html
@@ -24,7 +24,8 @@
           <li><a href="dashboard_staff.html"><i class = "fa-solid fa-house"></i>Dashboard</a></li>
           <li><a href="patients_staff.html"><i class = "fa-solid fa-users"></i>Patients</a></li>
           <li><a href="inventory_staff.html" style="background:#e6f0ff;color:#0056b3;"><i class = "fa-solid fa-box"></i>Inventory</a></li>
-          <li><a href="#"><i class = "fa-solid fa-gear"></i>Settings</a></li>
+          <li><a href="hotline_staff.html"><i class = "fas fa-phone-alt"></i>Hotlines</a></li>
+          <li><a href="settings_staff.html"><i class = "fa-solid fa-gear"></i>Settings</a></li>
         </ul>
       </nav>
     </aside>
